# hunterfiggs.com

./: .gitignore  CNAME  LICENSE  README.md  compose.yml  index.css  index.html  style.css
.github/workflows/: backend-deploy.yml  backend-test.yml  backend.yml  frontend.yml
backend/: Dockerfile  mypy.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/mnist_tools/: config.py  image.py  loader.py  model.py
backend/src/app/: main.py
backend/src/app/mnist_tools/: config.py  image.py  loader.py  model.py
backend/tests/: test_app.py  test_image.py  test_loader.py  test_model.py
backend/tests/data/: digits.tar.xz
frontend/: CNAME  index.html  test.html
frontend/projects/detect-digit/: index.html
frontend/projects/detect-digit/scripts/: draw.js
frontend/projects/pathfinding/: pathfinding.css  pathfinding.html
frontend/projects/pathfinding/scripts/: graph.js  pathfinding.js
frontend/projects/pathfinding/styles/: pathfinding.css
frontend/projects/zelda-clone/: zelda-clone.css
frontend/projects/zelda-clone/scripts/: sketches.js
frontend/scripts/: background.js  main.js
frontend/styles/: background.css  default.css  misc.css
projects/pathfinding/: pathfinding.css  pathfinding.html  style.css
projects/pathfinding/scripts/: pathfinding.js
projects/zelda-clone/: zelda-clone.css  zelda-clone.html
projects/zelda-clone/scripts/: boundary.js  particle.js  ray.js  sketches.js
